Add CharacterDetails and modify mobX stores

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,8 @@ target 'mobX_task' do
 
   pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'mobX_taskTests' do
     inherit! :search_paths
     # Pods for testing
