Add IntroScreen and usersStores

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,6 +44,8 @@ target 'mobX_task' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+
   target 'mobX_taskTests' do
     inherit! :search_paths
     # Pods for testing
