--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "16.9.0",
     "react-apollo": "^3.1.3",
     "react-native": "0.61.5",
+    "react-native-app-intro-slider": "^3.0.0",
     "react-native-elements": "^1.2.7",
+    "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
