--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-google-places')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-fbsdk')
     implementation project(':react-native-vector-icons')
