--- a/ios/Podfile
+++ b/ios/Podfile
@@ -48,6 +48,8 @@ target 'mobX_task' do
 
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+  pod 'react-native-google-places', :path => '../node_modules/react-native-google-places'
+
   target 'mobX_taskTests' do
     inherit! :search_paths
     # Pods for testing
