--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-google-places": "^3.1.2",
     "react-native-image-picker": "^2.0.0",
+    "react-native-maps": "0.26.1",
     "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
