--- a/ios/Podfile
+++ b/ios/Podfile
@@ -50,6 +50,8 @@ target 'mobX_task' do
 
   pod 'react-native-google-places', :path => '../node_modules/react-native-google-places'
 
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
   target 'mobX_taskTests' do
     inherit! :search_paths
     # Pods for testing
