--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-places": "^3.1.2",
     "react-native-image-picker": "^2.0.0",
-    "react-native-maps": "0.26.1",
+    "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
     "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
@@ -44,10 +44,12 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "^0.56.4",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "postinstall" : "npx jetify"
 }
