--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,6 @@ buildscript {
     }
     dependencies {
         classpath('com.android.tools.build:gradle:3.5.3')
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,17 +21,17 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url('$rootDir/../node_modules/react-native/android')
+            url "$rootDir/../node_modules/react-native/android"
         }
         maven {
-            // Android JSC is installed from npm
-            url('$rootDir/../node_modules/jsc-android/dist')
+            url "$rootDir/../node_modules/jsc-android/dist"
         }
-
+        maven {
+            url "https://maven.google.com"
+        }
         google()
-        jcenter()
-        maven { url 'https://jitpack.io' }
     }
 }
