--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "mobx-react": "^6.1.5",
     "react": "16.9.0",
     "react-apollo": "^3.1.3",
-    "react-native": "0.61.5",
+    "react-native": "^0.61.5",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.1",
-    "react-native-gesture-handler": "^1.5.3",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-google-places": "^3.1.2",
     "react-native-image-picker": "^2.0.0",
     "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
@@ -51,5 +51,5 @@
   "jest": {
     "preset": "react-native"
   },
-  "postinstall" : "npx jetify"
+  "postinstall": "npx jetify"
 }
