Modify ScrollView in DetailsScreen

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,9 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "com.android.support:multidex:1.0.3"
+    implementation "com.google.android.gms:play-services-location:16.0.0"
+    implementation "com.google.android.gms:play-services-maps:16.1.0"
+    implementation 'com.google.android.libraries.places:places:1.0.0'
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
