--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
       android:name=".MainApplication"
@@ -15,7 +13,6 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme">
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
-
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -28,7 +25,8 @@
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAuKr8SQ2YiI0bkKjgbH27SbKdRENpOETw"/>
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCWqn5W1t1p_5OR8jtAA5NbEqnsIgu0_sk"/>
 
     </application>
 
