--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDL_q5-em3xT_9aobzU3Ou5LPBAGhv8ThU"/>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
       <activity
         android:name=".MainActivity"
@@ -24,10 +25,6 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCWqn5W1t1p_5OR8jtAA5NbEqnsIgu0_sk"/>
-
     </application>
 
 </manifest>
