--- a/ios/mobX_task/Info.plist
+++ b/ios/mobX_task/Info.plist
@@ -22,22 +22,21 @@
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 	</array>
-
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>RNGPDemos needs your location to show you places</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>RNGPDemos needs your location to show you places</string>
-
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>This app requires access to the photo library.</string>
-
-    <key>NSPhotoLibraryAddUsageDescription</key>
-    <string>This app requires access to the photo library.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app does not require access to the microphone.</string>
+
 	<key>NSCameraUsageDescription</key>
 	<string>This app requires access to the camera.</string>
-	
+	<key>NSPhotoLibraryUsageDescription</key>
+  	<string>This app requires access to the gallery</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
