--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-image-picker": "^2.0.0",
     "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
     "react-native-paper": "^3.4.0",
+    "react-native-permissions": "^2.0.9",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.23",
