Modify geolocation for android

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -52,6 +52,8 @@ target 'mobX_task' do
 
   pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 
+  pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
+
   target 'mobX_taskTests' do
     inherit! :search_paths
     # Pods for testing
