--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,7 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
     }
     buildTypes {
         debug {
@@ -180,6 +181,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_geolocation')
     implementation project(':react-native-fbsdk')
     implementation project(':react-native-google-places')
     implementation project(':react-native-safe-area-context')
