--- a/ios/mobX_task/Info.plist
+++ b/ios/mobX_task/Info.plist
@@ -37,6 +37,13 @@
 	<key>NSPhotoLibraryUsageDescription</key>
   	<string>This app requires access to the gallery</string>
 
+	<key>NSAppTransportSecurity</key>
+	<dict>
+	<!--Include to allow all connections (DANGER)-->
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
