--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "graphql-tag": "^2.10.1",
     "mobx": "^5.15.2",
     "mobx-react": "^6.1.5",
+    "random-coordinates": "^1.0.1",
+    "random-latitude": "^1.0.1",
+    "random-longitude": "^1.0.1",
     "react": "16.9.0",
     "react-apollo": "^3.1.3",
     "react-native": "^0.61.5",
