--- a/ios/mobX_task/Info.plist
+++ b/ios/mobX_task/Info.plist
@@ -33,9 +33,11 @@
 	<string>This app does not require access to the microphone.</string>
 
 	<key>NSCameraUsageDescription</key>
-	<string>This app requires access to the camera.</string>
+	<string>camera description.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-  	<string>This app requires access to the gallery</string>
+	<string> photos description.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+  	<string> photos add description.</string>
 
 	<key>NSAppTransportSecurity</key>
 	<dict>
