--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/art": "^1.1.2",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/image-picker-ios": "^1.0.1",
     "@react-native-community/masked-view": "^0.1.6",
@@ -35,6 +36,7 @@
     "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
     "react-native-paper": "^3.5.0",
     "react-native-permissions": "^2.0.9",
+    "react-native-progress": "^4.0.3",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.29",
