--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,8 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        // ADD THIS
+        maven { url "https://www.jitpack.io" }
         google()
     }
 }
