--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-places": "^3.1.2",
+    "react-native-image-crop-picker": "^0.27.0",
     "react-native-image-picker": "^2.2.0",
     "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
     "react-native-paper": "^3.5.0",
