--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/image-picker-ios": "^1.0.1",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/push-notification-ios": "^1.0.5",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
@@ -35,6 +36,7 @@
     "react-native-image-crop-picker": "^0.27.0",
     "react-native-image-picker": "^2.2.0",
     "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
+    "react-native-notifications": "^3.1.1",
     "react-native-paper": "^3.5.0",
     "react-native-permissions": "^2.0.9",
     "react-native-progress": "^4.0.3",
