Add share characters, use Branch SDK

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,3 +21,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 RNGP_ANDROID_API_KEY=AIzaSyAuKr8SQ2YiI0bkKjgbH27SbKdRENpOETw
+
+MYAPP_RELEASE_STORE_FILE=mykeystore.keystore
+MYAPP_RELEASE_KEY_ALIAS=mykeyalias
+MYAPP_RELEASE_STORE_PASSWORD=1234567890
+MYAPP_RELEASE_KEY_PASSWORD=1234567890
