--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file(MYAPP_RELEASE_STORE_FILE)
+            storePassword MYAPP_RELEASE_STORE_PASSWORD
+            keyAlias MYAPP_RELEASE_KEY_ALIAS
+            keyPassword MYAPP_RELEASE_KEY_PASSWORD
+        }
 
     }
     buildTypes {
@@ -182,6 +188,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-share')
+    implementation project(':react-native-branch')
     implementation project(':react-native-image-crop-picker')
     implementation project(':@react-native-community_geolocation')
     implementation project(':react-native-fbsdk')
@@ -190,7 +198,7 @@ dependencies {
     implementation project(':react-native-screens')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-reanimated')
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'io.branch.sdk.android:library:4.+'
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "com.android.support:multidex:1.0.3"
     implementation "com.google.android.gms:play-services-location:16.0.0"
