--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,14 +22,32 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
+        android:launchMode="singleTask"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
         android:windowSoftInputMode="adjustResize">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        <!-- Branch URI scheme -->
+        <intent-filter>
+            <data android:scheme="fb470732783617358" android:host="open" />
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+        </intent-filter>
       </activity>
+        <!-- Branch init -->
+        <meta-data android:name="io.branch.sdk.BranchKey" android:value="key_live_mlSQA4rzCln123XupD9dXehhDrljheM5" />
+        <!-- Branch testing (TestMode "true" to simulate fresh installs on dev environment) -->
+        <meta-data android:name="io.branch.sdk.TestMode" android:value="false" />
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+<!--      &lt;!&ndash; Branch install referrer tracking &ndash;&gt;-->
+<!--      <receiver android:name="io.branch.referral.InstallListener" android:exported="true">-->
+<!--          <intent-filter>-->
+<!--            <action android:name="com.android.vending.INSTALL_REFERRER" />-->
+<!--          </intent-filter>-->
+<!--      </receiver>-->
     </application>
 
 </manifest>
