--- a/ios/mobX_task/mobX_task.entitlements
+++ b/ios/mobX_task/mobX_task.entitlements
@@ -4,5 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:d2iyn.app.link</string>
+		<string>applinks:d2iyn-alternate.app.link</string>
+	</array>
 </dict>
 </plist>
