--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-apollo": "^3.1.3",
     "react-native": "^0.61.5",
     "react-native-app-intro-slider": "^3.0.0",
+    "react-native-branch": "^4.3.0",
     "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.3",
@@ -43,6 +44,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.29",
+    "react-native-share": "^3.0.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.16",
