--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -198,11 +198,21 @@ dependencies {
     implementation project(':react-native-screens')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-reanimated')
-    implementation 'io.branch.sdk.android:library:4.+'
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "com.android.support:multidex:1.0.3"
     implementation "com.google.android.gms:play-services-location:16.0.0"
     implementation 'com.google.android.libraries.places:places:1.0.0'
+
+    //branch SDK
+    // required for all Android apps
+    implementation 'io.branch.sdk.android:library:4.+'
+
+    // required if your app is in the Google Play Store (tip: avoid using bundled play services libs)
+    implementation 'com.google.firebase:firebase-appindexing:19.0.0' // App indexing
+    implementation 'com.google.android.gms:play-services-ads:16+' // GAID matching
+
+    // optional
+    implementation 'com.android.support:customtabs:28.0.0'
 
     implementation(project(':react-native-maps')){
         exclude group: 'com.google.android.gms', module: 'play-services-base'
