--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,18 +36,21 @@
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
         </intent-filter>
+          <!-- Branch App Links (optional) -->
+        <intent-filter android:autoVerify="true">
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+          <data android:scheme="fb470732783617358" android:host="d2iyn.app.link" />
+          <data android:scheme="fb470732783617358" android:host="d2iyn-alternate.app.link" />
+        </intent-filter>
       </activity>
         <!-- Branch init -->
         <meta-data android:name="io.branch.sdk.BranchKey" android:value="key_live_mlSQA4rzCln123XupD9dXehhDrljheM5" />
-        <!-- Branch testing (TestMode "true" to simulate fresh installs on dev environment) -->
+        <meta-data android:name="io.branch.sdk.BranchKey.test" android:value="key_test_hlxrWC5Zx16DkYmWu4AHiimdqugRYMr" />
         <meta-data android:name="io.branch.sdk.TestMode" android:value="false" />
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-<!--      &lt;!&ndash; Branch install referrer tracking &ndash;&gt;-->
-<!--      <receiver android:name="io.branch.referral.InstallListener" android:exported="true">-->
-<!--          <intent-filter>-->
-<!--            <action android:name="com.android.vending.INSTALL_REFERRER" />-->
-<!--          </intent-filter>-->
-<!--      </receiver>-->
+
+        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
 </manifest>
