--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.16",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.18"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
