--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql-tag": "^2.10.1",
     "mobx": "^5.15.2",
     "mobx-react": "^6.1.5",
+    "mobx-utils": "^5.5.3",
     "random-coordinates": "^1.0.1",
     "random-latitude": "^1.0.1",
     "random-longitude": "^1.0.1",
