--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mobx": "^5.15.2",
     "mobx-react": "^6.1.5",
     "mobx-utils": "^5.5.3",
+    "pg": "^7.18.1",
     "random-coordinates": "^1.0.1",
     "random-latitude": "^1.0.1",
     "random-longitude": "^1.0.1",
@@ -34,6 +35,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.1",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-gifted-chat": "^0.13.0",
     "react-native-google-places": "^3.1.2",
     "react-native-image-crop-picker": "^0.27.0",
     "react-native-image-picker": "^2.2.0",
@@ -50,7 +52,10 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.16",
     "react-navigation-tabs": "^2.7.0",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.18"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.18",
+    "sequelize": "^5.21.4",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
