--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-document-picker')
     implementation project(':react-native-share')
     implementation project(':react-native-branch')
     implementation project(':react-native-image-crop-picker')
@@ -202,6 +203,8 @@ dependencies {
     implementation "com.android.support:multidex:1.0.3"
     implementation "com.google.android.gms:play-services-location:16.0.0"
     implementation 'com.google.android.libraries.places:places:1.0.0'
+
+    implementation project(':react-native-document-picker')
 
     //branch SDK
     // required for all Android apps
