--- a/ios/Podfile
+++ b/ios/Podfile
@@ -67,6 +67,8 @@ target 'mobX_task' do
 
   pod 'RNShare', :path => '../node_modules/react-native-share'
 
+  pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
+
   target 'mobX_taskTests' do
     inherit! :search_paths
     # Pods for testing
