--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "react-native": "^0.61.5",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-branch": "^4.3.0",
+    "react-native-document-picker": "^3.2.4",
     "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.1",
+    "react-native-file-picker": "0.0.19",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-google-places": "^3.1.2",
@@ -55,7 +58,7 @@
     "reanimated-bottom-sheet": "^1.0.0-alpha.18",
     "sequelize": "^5.21.4",
     "socket.io": "^2.3.0",
-    "socket.io-client": "2.1.1"
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
