--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_cameraroll')
     implementation project(':react-native-document-picker')
     implementation project(':react-native-share')
     implementation project(':react-native-branch')
