--- a/ios/Podfile
+++ b/ios/Podfile
@@ -69,6 +69,8 @@ target 'mobX_task' do
 
   pod 'react-native-document-picker', :path => '../node_modules/react-native-document-picker'
 
+  pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
+
   target 'mobX_taskTests' do
     inherit! :search_paths
     # Pods for testing
