--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-paper": "^3.5.0",
     "react-native-permissions": "^2.0.9",
     "react-native-progress": "^4.0.3",
+    "react-native-raw-bottom-sheet": "^2.0.6",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.29",
